--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="bg-header">
-        <div class="containe-alt header">
+        <div class="container-alt header">
             <p class="logo">Gericht</p>
             <ul class="list-nav-site">
                 <li class="nav-site"><a href="#">Home</a></li>
@@ -141,6 +141,7 @@
         </section>
         <section class="list-menu">
             <div class="container-alt">
+                <img src="./img/logo.png" alt="logo">
                 <ul class="list-menus">
                     <li><a href="./barhome.html" class="type-of-menu">Bar Menu</a></li>
                     <li><a href="#" class="type-of-menu">Food Menu</a></li>
