--- a/index.html
+++ b/index.html
@@ -53,13 +53,18 @@
                     </div>
                     <img src="./img/heroimg.png" alt="toast with eggs" width="527px" height="636px">
                 </div>
-                
+                <!-- <div class="hero-line">
+                    <div></div>
+                </div> -->
                 <div class="hero-numbers">
                     <p>01</p>
                     <div></div>
                     <p>02</p>
                     <p>03</p>
                     <p>04</p>
+                </div>
+                <div class="hero-line">
+                    <div></div>
                 </div>
                 <div class="hero-scroll">
                     <p>SCROLL</p>
@@ -98,6 +103,9 @@
         </section>
         <section class="reservations">
             <div class="container-inner">
+                <div class="logo-reservations">
+                    <img src="./img/logo.png" alt="logo">
+                </div>
                 <div class="div-div-reservations">
                     <div class="div-reservations">
                         <div class="div-p-reservations">
@@ -269,79 +277,147 @@
         </div>
         </section>
         <section class="chefs-word">
-            <div class="container">
-                <p>Chtf's Word</p>
-                <h3>What We Believe In</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit auctor sit .
-                auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue ac consequat,
-                aliquam molestie lectus eu. Congue iaculis integer curabitur semper sit nunc.</p>
-                <h4>Kevin Luo</h4>
-                <p>Chef & Founder</p>
+            <div class="container-inner">
+                <ul class="list-chefs-section">
+                    <li>
+                        <img src="./img/chef.png" alt="chefs picture" width="634px" height="789px">
+                    </li>
+                    <li>
+                        <p class="chef-title">Chef's Word</p>
+                        <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                        <h3 class="believe-in">What We Believe In</h3>
+                        <p class="comment-chef"><img src="./img/six.png" alt="six">Lorem ipsum dolor sit amet, consectetur adipiscing elit auctor sit .
+                            auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue ac
+                            consequat,
+                            aliquam molestie lectus eu. Congue iaculis integer curabitur semper sit nunc.</p>
+                        <h4 class="chefs-name">Kevin Luo</h4>
+                        <p class="kevin-professions">Chef & Founder</p>
+                        <img src="./img/chefsautograph.png" alt="Kevin Luo" width="235px" height="83px">
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="happy-customers">
-            <div class="container">
-                <p>Testimony</p>
-                <h3>Happy Customers</h3>
-                <ul>
-                    <li>
-                        <img src="./img/greatman.png" alt="man">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
-                        sit. Nulla scelerisque scelerisque congue.</p>
-                        <h5>Wade Warren</h5>
-                        <p>Sommelier</p>
-                    </li>
-                    <li>
-                        <img src="./img/prettywoman.png" alt="woman">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
-                        sit. Nulla scelerisque scelerisque congue.</p>
-                        <h5>Jane Cooper</h5>
-                        <p>Chef</p>
-                    </li>
-                    <li>
-                        <img src="./img/curlyman.png" alt="man">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
-                        sit. Nulla scelerisque scelerisque congue.</p>
-                        <h5>Robert Fox</h5>
-                        <p>Chef</p>
-                    </li>
-                    <li>
-                        <img src="./img/blackwoman.png" alt="woman">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
-                        sit. Nulla scelerisque scelerisque congue.</p>
-                        <h5>Brooklyn Simmons</h5>
-                        <p>Caterer</p>
-                    </li>
-                </ul>
+            <div class="container-inner">
+                <div class="customers-titles">
+                    <p class="title-testimony">Testimony</p>
+                    <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                    <h3 class="title-happy-customers">Happy Customers</h3>
+                </div>
+                <div class="list-customers">
+                    <ul>
+                        <li class="customer">
+                            <div>
+                                <img src="./img/greatman.png" alt="man" width="206px" height="210px">
+                            </div>
+                            <div class="customer-info">
+                                <p class="info-about-customer">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+                                sit. Nulla scelerisque scelerisque congue.</p>
+                                <h5 class="name-customer">Wade Warren</h5>
+                                <p class="customers-profession">Sommelier</p>
+                            </div>
+                        </li>
+                        <li class="customer">
+                            <div>
+                                <img src="./img/curlyman.png" alt="man" width="206px" height="210px">
+                            </div>
+                            <div class="customer-info">
+                                <p class="info-about-customer">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis
+                                    mauris eget
+                                    sit. Nulla scelerisque scelerisque congue.</p>
+                                <h5 class="name-customer">Robert Fox</h5>
+                                <p class="customers-profession">Chef</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="customer">
+                            <div><img src="./img/prettywoman.png" alt="woman" width="206px" height="210px"></div>
+                            <div class="customer-info">
+                                <p class="info-about-customer">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla
+                                    scelerisque scelerisque congue.</p>
+                                <h5 class="name-customer">Jane Cooper</h5>
+                                <p class="customers-profession">Chef</p>
+                            </div>
+                        </li>
+                        <li class="customer">
+                            <div>
+                                <img src="./img/blackwoman.png" alt="woman" width="206px" height="210px">
+                            </div>
+                            <div class="customer-info">
+                                <p class="info-about-customer">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+                                sit. Nulla scelerisque scelerisque congue.</p>
+                                <h5 class="name-customer">Brooklyn Simmons</h5>
+                                <p class="customers-profession">Caterer</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="video">
-            <img src="./img/logo.png" alt="logo">
-            <img src="./img/playbutton.png" alt="play button">
+            <div class="container-alt">
+                <img src="./img/logo.png" alt="logo" class="logo-play">
+                <div class="button-play">
+                    <img src="./img/playbutton.png" alt="play button">
+                </div>
+            </div>
         </section>
         <section class="laurels">
-            <div class="container">
-                <p>Awards & Recognition</p>
-                <h4>Our Laurels</h4>
-                <ul>
-                    <li>
-                        <h6>Bib Gourmond</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                    </li>
-                    <li>
-                        <h6>Rising Star</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                    </li>
-                    <li>
-                        <h6>AA Hospitality</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                    </li>
-                    <li>
-                        <h6>Outstanding Chef</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                    </li>
-                </ul>
-                <img src="./img/grilledmeal.png" alt="meat">
+            <div class="container-inner">
+                <div class="section-laurels">
+                    <div>
+                        <p class="awards">Awards & Recognition</p>
+                        <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                        <h4 class="title-laurels">Our Laurels</h4>
+                        <div class="list-awards">
+                            <ul>
+                                <li class="type-of-awards">
+                                    <div>
+                                        <img src="./img/second.png" alt="second place" width="79px" height="79px">
+                                    </div>
+                                    <div>
+                                        <h6 class="name-award">Bib Gourmond</h6>
+                                        <p class="comment-about-award">Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                </li>
+                                <li class="type-of-awards">
+                                    <div>
+                                        <img src="./img/fifth.png" alt="fifth place" width="79px" height="79px">
+                                    </div>
+                                    <div>
+                                        <h6 class="name-award">AA Hospitaly</h6>
+                                        <p class="comment-about-award">Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li class="type-of-awards">
+                                    <div>
+                                        <img src="./img/first.png" alt="first place" width="79px" height="79px">
+                                    </div>
+                                    <div>
+                                        <h6 class="name-award">Rising Star</h6>
+                                        <p class="comment-about-award">Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                </li>
+                                <li class="type-of-awards">
+                                    <div>
+                                        <img src="./img/third.png" alt="third place" width="79px" height="79px">
+                                    </div>
+                                    <div>
+                                        <h6 class="name-award">Outstanding Chef</h6>
+                                        <p class="comment-about-award">Lorem ipsum dolor sit amet consectetur.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <div class="img-laurels">
+                    <img src="./img/grilledmeal.png" alt="meat" width="555px" height="691px">
+                </div>
+                </div>
             </div>
         </section>
         <section class="updates">
