--- a/index.html
+++ b/index.html
@@ -421,88 +421,122 @@
             </div>
         </section>
         <section class="updates">
-            <div class="container">
-                <p>Blogs</p>
-                <h4>Gericht Updates</h4>
-                <ul>
-                    <li>
-                        <img src="./img/grilledsteak.png" alt="steak">
-                        <p>16 Apr 2021</p>
-                        <p>-Annalisa L</p>
-                        <h6>tips for prepping and caring for your grill</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
+            <div class="container-inner">
+                <p class="title-blogs">Blogs</p>
+                <div class="spoon-updates"> 
+                    <img src="./img/spoon.png" alt="spoon" width="40px" height="9px" >
+                </div>
+                <h4 class="title-updates">Gericht Updates</h4>
+                <ul class="list-updates">
+                    <li class="meal-and-info">
+                        <img src="./img/grilledsteak.png" alt="steak" width="412px" height="430px">
+                        <p class="date">16 Apr 2021 <span>-Annalisa L</span></p>
+                        <h6 class="info-about-update">tips for prepping and caring for your grill</h6>
+                        <p class="small-text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
                         in.</p>
-                        <p>Read More</p>
+                        <p class="text-read-more">Read More</p>
                     </li>
-                    <li>
-                        <img src="./img/pinkcoctails.png" alt="cocktails">
-                        <p>23 May 2021</p>
-                        <p>-John Michael</p>
-                        <h6>summer cocktails and mocktails</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
+                    <li class="meal-and-info">
+                        <img src="./img/pinkcoctails.png" alt="cocktails" width="412px" height="430px">
+                        <p class="date">23 May 2021<span>-John Michael</span></p>
+                        <h6 class="info-about-update">summer cocktails and <p>mocktails</p> </h6>
+                        <p class="small-text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
                         in.</p>
-                        <p>Read More</p>
+                        <p class="text-read-more">Read More</p>
                     </li>
-                    <li>
-                        <img src="./img/brownfood.png" alt="food balls">
-                        <p>06 Aug 2021</p>
-                        <p>-Fred W</p>
-                        <h6>easy cooking for college students</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
+                    <li class="meal-and-info">
+                        <img src="./img/brownfood.png" alt="food balls" width="412px" height="430px">
+                        <p class="date">06 Aug 2021<span>-Fred W</span></p>
+                        <h6 class="info-about-update">easy cooking for college  <p>students</p> </h6>
+                        <p class="small-text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus
                         in.</p>
-                        <p>Read More</p>
+                        <p class="text-read-more">Read More</p>
                     </li>
                 </ul>
-                <button>View More</button>
+                <div class="button-reservation">
+                    <button class="hero-button">View More</button>
+                </div>
+            </div>
+            <div class="container-alt logo-updates">
                 <img src="./img/logo.png" alt="logo">
             </div>
         </section>
         <section class="gallery">
-            <div class="container">
-                <p>Instagram</p>
-                <h3>Photo Gallery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mu.</p>
-                <button>View More</button>
-                <img src="./img/japanfood.png" alt="japan meal">
-                <img src="./img/alcohol.png" alt="alcohol drinks">
-                <img src="./img/egg.png" alt="egg on toast">
+            <div class="container-alt section-gallery">
+                <div>
+                    <p class="text-instagram">Instagram</p>
+                    <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                    <h3 class="title-gallery">Photo Gallery</h3>
+                    <p class="small-text-gallery">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mu.</p>
+                    <button class="hero-button">View More</button>
+                </div>
+                <div class="image-wrapper">
+                    <img src="./img/japanfood.png" alt="japan meal" width="301px" height="447px" class="img-gallery">
+                </div>
+                <div class="image-wrapper">
+                    <img src="./img/alcohol.png" alt="alcohol drinks" width="301px" height="447px" class="img-gallery">
+                </div>
+                <div class="image-wrapper">
+                    <img src="./img/egg.png" alt="egg on toast" width="301px" height="447px" class="img-gallery">
+                </div>
+            </div>
+            <div class="container-alt">
+                <img src="./img/logo.png" alt="logo">
             </div>
         </section>
     </main>
     <footer>
-        <div class="container">
-            <div>
-                <p>Newsletter</p>
-                <h3>Subscribe To Our Newsletter</h3>
-                <p>And never miss latest Updates!</p>
-                <input type="email" placeholder="Email Adress">
-                <button>Subscribe</button>
+        <div class="container-inner">
+            <div class="newsletter-wrapper">
+                <p class="title-newsletter">Newsletter</p>
+                <div class="newsletter-spoon">
+                    <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                </div>
+                <h3 class="title-subscribe">Subscribe To Our Newsletter</h3>
+                <p class="never-miss-updates">And never miss latest Updates!</p>
+                <div class="buttons-newsletter">
+                    <input type="email" placeholder="Email Adress" class="email-form">
+                    <button class="subscribe">Subscribe</button>
             </div>
-            <ul>
-                <li>
-                    <p>Contact US</p>
-                    <p>9 W 53rd St, New York, NY 10019, USA</p>
-                    <p>+1 212-344-1230</p>
-                    <p>+1 212-555-1230</p>
+            </div>
+        </div>
+        <div class="container-alt">
+            <div class="hero-line">
+                <div></div>
+            </div>
+            <div class="text-top">
+                <p>Top</p>
+            </div>
+        </div>
+        <div class="container-inner">   
+            <ul class="list-information">
+                <li class="contact">
+                    <p class="contact-us">Contact US</p>
+                    <p class="street">9 W 53rd St, New York, NY 10019, USA</p>
+                    <p class="phone-number">+1 212-344-1230</p>
+                    <p class="phone-number">+1 212-555-1230</p>
                 </li>
-                <li>
-                    <h3>Gericht</h3>
-                    <p>"The best way to find yourself is to lose yourself in the service of others.”</p>
-                    <div>
-                        <img src="./img/facebooklogo.png" alt="facebook">
-                        <img src="./img/twitterlogo.png" alt="twitter">
-                        <img src="./img/instagramlog.png" alt="instagram">
+                <li class="gericht-footer">
+                    <h3 class="main-title">Gericht</h3>
+                    <p class="lyrics-footer">"The best way to find yourself is to lose yourself in the  <p>service of others.”</p> </p>
+                    <img src="./img/spoon.png" alt="spoon" width="40px" height="9px">
+                    <div class="footer-logos">
+                        <img src="./img/facebooklogo.png" alt="facebook" class="logo-footer">
+                        <img src="./img/twitterlogo.png" alt="twitter" class="logo-footer">
+                        <img src="./img/instagramlog.png" alt="instagram" class="logo-footer">
                     </div>
                 </li>
-                <li>
-                    <p>Working Hours</p>
-                    <p>Mondayu-Friday:</p>
-                    <p>08:00 am -12:00 am</p>
-                    <p>Saturday-Sunday:</p>
-                    <p>07:00am -11:00 pm</p>
+                <li class="schedule-info">
+                    <p class="schedule">Working Hours</p>
+                    <p class="schedule-monday-friday">Monday-Friday:</p>
+                    <p class="time">08:00 am -12:00 am</p>
+                    <p class="schedule-saturday-sunday">Saturday-Sunday:</p>
+                    <p class="time">07:00am -11:00 pm</p>
                 </li>
             </ul>
-            <p>2021 Gerícht. All Rights reserved.</p>
+        </div>
+        <div class="container-alt rights-footer">
+            <p class="rights">2021 Gerícht. All Rights reserved.</p>
         </div>
     </footer>
 </body>
