--- a/index.html
+++ b/index.html
@@ -439,13 +439,13 @@
                     <p class="small-text-gallery">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mu.</p>
                     <button class="hero-button">View More</button>
                 </div>
-                <div class="image-wrapper">
+                <div class="image-wrapper-gallery">
                     <img src="./img/japanfood.png" alt="japan meal" width="301px" height="447px" class="img-gallery">
                 </div>
-                <div class="image-wrapper">
+                <div class="image-wrapper-gallery">
                     <img src="./img/alcohol.png" alt="alcohol drinks" width="301px" height="447px" class="img-gallery">
                 </div>
-                <div class="image-wrapper">
+                <div class="image-wrapper-gallery">
                     <img src="./img/egg.png" alt="egg on toast" width="301px" height="447px" class="img-gallery">
                 </div>
             </div>
